--- a/src/index.css
+++ b/src/index.css
@@ -43,3 +43,42 @@ body {
 .search-box .search-bar:focus {
   background-color: rgba(255, 255, 255, 0.75);
 }
+.location-box .location {
+  color: #fff;
+  font-size: 50px;
+  font-weight: 500;
+  text-align: center;
+  text-shadow: 3px 3px rgba(50, 50, 70, 0.5);
+}
+.location-box .date {
+  color: #fff;
+  font-size: 20px;
+  font-weight: 300;
+  font-style: italic;
+  text-align: center;
+  text-shadow: 2px 2px rgba(50, 50, 70, 0.5);
+  margin-top: 10px;
+}
+.weather-box {
+  text-align: center;
+}
+.weather-box .temperature {
+  position: relative;
+  display: inline-block;
+  margin: 30px auto;
+  background-color: rgba(255, 255, 255, 0.2);
+  border-radius: 15px;
+  padding: 15px 25px;
+  color: #fff;
+  font-size: 100px;
+  font-weight: 800;
+  text-shadow: 3px 6px rgba(50, 50, 70, 0.5);
+  text-align: center;
+  box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.3);
+}
+.weather-box .weather {
+  color: #fff;
+  font-size: 35px;
+  font-weight: 700;
+  text-shadow: 5px 5px rgba(50, 50, 70, 0.7);
+}
