--- a/src/asset/styles/views/_app.scss
+++ b/src/asset/styles/views/_app.scss
@@ -6,81 +6,54 @@
 body {
     font-family: 'montseratt', sans-serif;
 }
-.app-warm {
-    background-image: url('../../warmdesktop.jpg');
-    background-size: cover;
-    background-position: bottom;
-    transition: 0.4 ease-out;
-    .main {
-        min-height: 100vh;
-        background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.75));
-        padding: 25px;
-        .search-box {
-            width: 100%;
-            margin: 0 0 75px;
-            .search-bar {
-                display: block;
-                width: 100%;
-                padding: 15px;
-                appearance: none;
-                background: none;
-                border: none;
-                outline: none;
-                background-color: rgba(255, 255, 255, 0.8);
-                border-radius: 15px;
-                margin-top: -10px;
-                box-shadow: 0px 5px rgba(0, 0, 0, 0.2);
-                color: #313131;
-                font-size: 20px;
-                transition: .4s ease;
-            }
-        }
-    }
-    .location-box {
-        .location {
-            color: #fff;
+.welcome-page {
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.75));
+    .left-pane {
+        color: #fff;
+        .title {
             font-size: 50px;
-            font-weight: 500;
-            text-align: center;
-            text-shadow: 3px 3px rgba(50, 50, 70, 0.5);
+            font-weight: 700;
+            margin-top: 150px;
         }
-        .date {
-            color: #fff;
+        .notes {
             font-size: 20px;
-            font-weight: 300;
-            font-style: italic;
-            text-align: center;
-            text-shadow: 2px 2px rgba(50, 50, 70, 0.5);
-            margin-top: 10px;
         }
     }
-    .weather-box {
-        text-align: center;
-        .temperature {
-            position: relative;
-            display: inline-block;
-            margin: 30px auto;
-            background-color: rgba(255, 255, 255, 0.2);
-            border-radius: 15px;
-            padding: 15px 25px;
-            color: #fff;
-            font-size: 100px;
-            font-weight: 800;
-            text-shadow: 3px 6px rgba(50, 50, 70, 0.5);
-            text-align: center;
-            box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.3);
-        }
-        .weather {
-            color: #fff;
-            font-size: 35px;
-            font-weight: 700;
-            text-shadow: 5px 5px rgba(50, 50, 70, 0.7);
-        }
+    .right-pane {
+        margin-right: -20rem;
+        margin-left: 1.5rem;
     }
 }
-  //.app-cold {
-    //background-image: url('./asset/cooldesktop.jpg');
-  //}
-  
-  
-  //.search-box 
+
+//Styles for mobile view
+@media only screen and (max-width: 600px) {
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
+    body {
+        font-family: 'montseratt', sans-serif;
+    }
+    .welcome-page {
+        background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.75));
+        .left-pane {
+            display: none;
+            color: #000;
+            margin-bottom: 40px;
+            .title {
+                font-size: 30px;
+                font-weight: 800;
+                margin-top: 20px;
+            }
+            .notes {
+                font-size: 18px;
+            }
+        }
+        .right-pane {
+            min-width: 99.99vw;
+            margin: 20px -3px 0px -10px;
+        }
+    }
+    
+}
