--- a/src/asset/styles/views/_home.scss
+++ b/src/asset/styles/views/_home.scss
@@ -17,6 +17,17 @@ body {
         min-height: 100vh;
         background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.75));
         padding: 25px;
+        .welcome-note {
+            display: none;
+            .title {
+                font-size: 30px;
+                font-weight: 800;
+                margin-top: 20px;
+            }
+            .notes {
+                font-size: 18px;
+            }
+        }
         .search-box {
             width: 100%;
             margin: 0 0 75px;
@@ -81,7 +92,7 @@ body {
     }
 }
 
-
+//Styles for the mobile view for class of app-warm.
 @media only screen and (max-width: 600px) {
     .app-warm {
         background: url("../../../asset/warmmobile.jpg");
@@ -90,6 +101,21 @@ body {
             min-height: 100vh;
             background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.75));
             padding: 25px;
+            .welcome-note {
+                display: block;
+                color: rgb(221, 125, 87);
+                margin-bottom: 50px;
+                .title {
+                    font-size: 30px;
+                    font-weight: 800;
+                    margin-top: -30px;
+                    margin-bottom: 10px;
+                }
+                .notes {
+                    font-size: 18px;
+                    margin-bottom: 20px;
+                }
+            }
             .search-box {
                 width: 100%;
                 margin: 0 0 75px;
@@ -113,6 +139,7 @@ body {
             }
         }
         .location-box {
+            margin-top: -30px;
             .location {
                 color: #fff;
                 font-size: 50px;
@@ -140,7 +167,7 @@ body {
                 border-radius: 15px;
                 padding: 15px 20px;
                 color: #fff;
-                font-size: 100px;
+                font-size: 50px;
                 font-weight: 800;
                 text-shadow: 3px 6px rgba(50, 50, 70, 0.5);
                 text-align: center;
@@ -148,7 +175,7 @@ body {
             }
             .weather {
                 color: #fff;
-                font-size: 35px;
+                font-size: 25px;
                 font-weight: 700;
                 text-shadow: 5px 5px rgba(50, 50, 70, 0.7);
             }
@@ -166,6 +193,17 @@ body {
         min-height: 100vh;
         background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.75));
         padding: 25px;
+        .welcome-note {
+            display: none;
+            .title {
+                font-size: 30px;
+                font-weight: 800;
+                margin-top: 20px;
+            }
+            .notes {
+                font-size: 18px;
+            }
+        }
         .search-box {
             width: 100%;
             margin: 0 0 75px;
@@ -230,7 +268,7 @@ body {
     }
 }
 
-
+//Styles for the mobile view for class of app-cold.
 @media only screen and (max-width: 600px) {
     .app-cold {
         background: url("../../../asset/coolmobile.jpg");
@@ -239,6 +277,21 @@ body {
             min-height: 100vh;
             background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.75));
             padding: 25px;
+            .welcome-note {
+                display: block;
+                color: #fff;
+                margin-bottom: 50px;
+                .title {
+                    font-size: 30px;
+                    font-weight: 800;
+                    margin-top: -30px;
+                    margin-bottom: 10px;
+                }
+                .notes {
+                    font-size: 18px;
+                    margin-bottom: 20px;
+                }
+            }
             .search-box {
                 width: 100%;
                 margin: 0 0 75px;
@@ -289,7 +342,7 @@ body {
                 border-radius: 15px;
                 padding: 15px 20px;
                 color: #fff;
-                font-size: 100px;
+                font-size: 50px;
                 font-weight: 800;
                 text-shadow: 3px 6px rgba(50, 50, 70, 0.5);
                 text-align: center;
@@ -297,7 +350,7 @@ body {
             }
             .weather {
                 color: #fff;
-                font-size: 35px;
+                font-size: 25px;
                 font-weight: 700;
                 text-shadow: 5px 5px rgba(50, 50, 70, 0.7);
             }
@@ -310,12 +363,22 @@ body {
     background: #6E8C89 url("../../../asset/background.png");
     background-size: cover;
     background-repeat: no-repeat;
-    transition: .8s ease-out;
-    
+    transition: .8s ease-out;   
     .main {
         min-height: 100vh;
         background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.75));
         padding: 25px;
+        .welcome-note {
+            display: none;
+            .title {
+                font-size: 30px;
+                font-weight: 800;
+                margin-top: 20px;
+            }
+            .notes {
+                font-size: 18px;
+            }
+        }
         .search-box {
             width: 100%;
             margin: 0 0 75px;
@@ -391,6 +454,21 @@ body {
             min-height: 100vh;
             background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.75));
             padding: 25px;
+            .welcome-note {
+                display: block;
+                color: rgb(247, 232, 102);
+                margin-bottom: 100px;
+                .title {
+                    font-size: 30px;
+                    font-weight: 800;
+                    margin-top: -30px;
+                    margin-bottom: 10px;
+                }
+                .notes {
+                    font-size: 18px;
+                    margin-bottom: 20px;
+                }
+            }
             .search-box {
                 width: 100%;
                 margin: 0 0 75px;
