--- a/src/asset/styles/views/_app.scss
+++ b/src/asset/styles/views/_app.scss
@@ -37,6 +37,9 @@ body {
     }
     .welcome-page {
         background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.75));
+        min-width: 100vw;
+        margin: 0;
+        padding: 0;
         .left-pane {
             display: none;
             color: #000;
