--- a/src/asset/styles/views/_home.scss
+++ b/src/asset/styles/views/_home.scss
@@ -97,6 +97,9 @@ body {
     .app-warm {
         background: url("../../../asset/warmmobile.jpg");
         background-repeat: no-repeat;
+        min-width: 100vw;
+        margin: 0;
+        padding: 0;
         .main {
             min-height: 100vh;
             background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.75));
@@ -273,6 +276,9 @@ body {
     .app-cold {
         background: url("../../../asset/coolmobile.jpg");
         background-repeat: no-repeat;
+        min-width: 100vw;
+        margin: 0;
+        padding: 0;
         .main {
             min-height: 100vh;
             background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.75));
